@@ -1,11 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <name>JBoss Web Services - API</name>
-  <groupId>org.jboss.ws</groupId>
   <artifactId>jbossws-api</artifactId>
   <packaging>jar</packaging>
-  <description>JBossWS API jakarta</description>
+
+  <name>JBoss Web Services - API</name>
+  <description>JBoss Web Services - JBossWS API Jakarta Version</description>
+  <url>https://github.com/jbossws/jbossws-common</url>
 
   <version>3.1.0-SNAPSHOT</version>
 
@@ -13,7 +14,7 @@
   <parent>
     <groupId>org.jboss.ws</groupId>
     <artifactId>jbossws-parent</artifactId>
-    <version>2.0.0.Final</version>
+    <version>2.1.1.Final</version>
   </parent>
 
   <!-- Source Control Management -->
@@ -21,10 +22,13 @@
     <connection>scm:git:https://github.com/jbossws/jbossws-api.git</connection>
     <developerConnection>scm:git:https://github.com/jbossws/jbossws-api.git</developerConnection>
     <url>https://github.com/jbossws/jbossws-api</url>
-    <tag>HEAD</tag>
+    <tag>${nexus.staging.tag}</tag>
   </scm>
 
   <properties>
+    <!-- Repository Deployment Settings -->
+    <nexus.staging.tag>jbossws-api-${project.version}</nexus.staging.tag>
+    <!-- Dependency versions -->
     <maven.javadoc.skip>false</maven.javadoc.skip>
     <jboss-logging.version>3.5.1.Final</jboss-logging.version>
     <jboss-logging-processor.version>2.2.1.Final</jboss-logging-processor.version>
@@ -61,23 +65,46 @@
       <version>${jboss-jakarta-xml-ws-api}</version>
       <scope>provided</scope>
     </dependency>
-
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>${version.maven-javadoc-plugin}</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+
+  <profiles>
+    <profile>
+      <id>jdk23</id>
+      <activation>
+        <jdk>[23,)</jdk>
+      </activation>
       <build>
         <plugins>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-javadoc-plugin</artifactId>
-            <version>${version.maven-javadoc-plugin}</version>
-            <executions>
-              <execution>
-                <phase>package</phase>
-                <goals>
-                  <goal>jar</goal>
-                </goals>
-              </execution>
-            </executions>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <compilerArgs combine.children="append">
+                <!-- SE 23+ requires explicit config to turn on annotation processing -->
+                <arg>-proc:full</arg>
+              </compilerArgs>
+            </configuration>
           </plugin>
         </plugins>
       </build>
+    </profile>
+  </profiles>
 </project>
